_integration/httpproxy-naming-test.yaml
# TODO(youngnick): This should be converted into a part of the integration test suite.
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: contour-validname
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.local
  routes: 
    - conditions:
      - prefix: /
      services: 
        - name: contour
          port: 8080

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: contour-shortname
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour
  routes: 
    - conditions:
      - prefix: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: contour-singlechar
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: c
  routes: 
    - conditions:
      - prefix: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: contour-hyphen
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.projectcontour
  routes: 
    - conditions:
      - prefix: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: contour-fqdn
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.projectcontour.svc.cluster.local
  routes: 
    - conditions:
      - prefix: /
      services: 
        - name: contour
          port: 8080
