_integration/ingressroute-naming-test.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: contour-validname
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.local
  routes: 
    - match: /
      services: 
        - name: contour
          port: 8080

---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: contour-shortname
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour
  routes: 
    - match: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: contour-singlechar
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: c
  routes: 
    - match: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: contour-hyphen
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.projectcontour
  routes: 
    - match: /
      services: 
        - name: contour
          port: 8080
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: contour-fqdn
  namespace: projectcontour
spec: 
  virtualhost:
    fqdn: contour.projectcontour.svc.cluster.local
  routes: 
    - match: /
      services: 
        - name: contour
          port: 8080
